--- a/Summary_Summer_2020_JV.tex
+++ b/Summary_Summer_2020_JV.tex
@@ -21,23 +21,23 @@ The document it’s called “Literature review” and it’s on the Github repo
 
 
 \item The code:
-There are 2 codes mixed in the G drive and in the Github repository. The first code is from the early stages of the project and the developer is Yusuf, his work is very well detailed and documented in the “order of the files” word document. This word document explains the steps, data sets and order of how the program should be run. We discovered a problem with the code when we were running these models. This code uses the command “destring” to merge the data sets, the problem was that it is ignoring the suffix on each law, therefore if 2 laws have the same number, but different suffix, the code will consider them as the same. 
-For example, let’s take the laws H 2 and HR 2. These are different laws/actions, but the “destring” command removes the suffix and both laws are now called 2. This is the problem. 
-Another problem with this code is that, some of the programs are calling datasets and other pieces of code that were on Yusuf’s computer, not on the G drive. It is important to consider also, that this work generates several output files that are called by different programs, therefore there are difficult to track and are located in different folders. 
+There are 2 programs mixed in the G drive and in the Github repository. The first program is from the early stages of the project and the developer is Yusuf, his work is very well detailed and documented in the “order of the files” word document. This word document explains the steps, data sets and order of how the program should be run. We discovered a problem with the code when we were running these models. This program uses the command “destring” to merge the data sets, the problem was that it is ignoring the suffix on each law, therefore if 2 laws have the same number, but different suffix, the code will consider them as the same. 
+For example, let’s take the laws H 2 and HR 2. These are different laws/actions, but the “destring” command removes the suffix and both laws are now called 2. Which is not correct. 
+Another issue with this program is that it calls datasets and other pieces of code that were on Yusuf’s computer, not on the G drive. It is important to consider also, that this work generates several output files that are called by different pieces of code later on, making them difficult to track and are located in different folders. 
 
-The second code is an update of Yusuf’s work and the developer is Yimin. This code is documented in the “Replication” file located in the Github repository. This code consists in running only 3 different pieces of code. We encountered a problem with the third of these files called \texttt{“RStan\_model.R”}. This program presents some errors when we are running the rstan command in R.  This code avoids using the “destring” command and it should perform faster than Yusuf’s code. 
+The second program is an update of Yusuf’s work and the developer is Yimin. This program is documented in the “Replication” file located in the Github repository. This program consists of running 3 different pieces of code. We encountered a problem with the third of these files called \texttt{“RStan\_model.R”}. This piece of code presents some errors when running the rstan command in R.  This code avoids using the “destring” command and it should perform faster than Yusuf’s code. Its also makes the mergin more efficient and less by doing a better job at cleaning the data set.  
 
 At the time of writing this document, I am still working of running the rstan model, troubleshooting the errors. 
 
-The other 2 codes \texttt{Generate\_vote\_data\_for\_R.do} and \texttt{Generate\_group\_dummy\_by\_action.do} runs perfectly and their output is located in the Combined files folder in the G drive. 
+The other 2 codes \texttt{Generate\_vote\_data\_for\_R.do} and \texttt{Generate\_group\_dummy\_by\_action.do} run perfectly and their output is located in the Combined files folder in the G drive. 
 
-One detail that brings confusion is that the codes of both programs (Yusuf’s and Yimin’s) are all located in the same folders. Therefore, future work will be to put them in different folders, which will entail changing the output locations in all the individual R and Stata programs. 
+One detail that brings confusion is that Yusuf's and Yimin's work are located in the same folders. Therefore, future work will be to separating them and organize this 2 programs, which will entail changing the output locations in all the individual R and Stata programs. 
 
 
 
 \item Data
-In Yusuf’s code, he is using the 3 different data sets, 2 from Maplight and one from Poole’s (Voteview.com). Bill Position Maplight, can be downloaded from their website using a key (need to request one for free) and Votes Maplight was emailed to professor Buzard. Poole’s data set can be downloaded from Voteview.com.
-Yimin’s code only uses the two Maplight data sets, previously mentioned.
+In Yusuf’s program, he is using 3 different data sets, 2 from Maplight and one from Poole (Voteview.com). Bill Position Maplight, can be downloaded from their website using a key (need to request one for free) and Votes Maplight was emailed to professor Buzard. Poole’s data set can be downloaded from Voteview.com.
+Yimin’s program only uses the two Maplight data sets, previously mentioned.
 
 I requested a key from Maplight to update the dataset, but, as of the writing of this summary, haven’t received a link to download the dataset. 
 
