--- a/Summary_Summer_2020_JV.tex
+++ b/Summary_Summer_2020_JV.tex
@@ -1,11 +1,13 @@
 \documentclass[a4paper,12pt]{article}
+\usepackage[htt]{hyphenat}
+\usepackage{url}
 
 \begin{document}
 \title{\vspace{-1.5 cm}Summary of the work during Summer 2020}
 \author{Jorge Valdebenito}
 \maketitle
 
-This document presents the summary for the summer of 2020 work on the political uncertainty project. 
+\noindent This document presents the summary for the summer of 2020 work on the political uncertainty project. 
 \begin{enumerate}
 \item Literature review:
 I updated the literature of the 2016 paper “Lobbying and Legislative Uncertainty” by Buzard and Saiegh (2016). This review contained the latest literature on ideal point models estimators and recent work on political uncertainty models using roll call data. An important filter for ideal point models was to focus on research that employs a multidimensional approach. Most of the papers that take a unidimensional approach were discarded, unless they specifically focus on uncertainty or efficiency of the unidimensional model.
@@ -16,7 +18,7 @@ The Literature review was based on:
 \item Clinton, Jackman, Rivers (2004)
 \item Crespin and Rohde (2010)
 \end{itemize}
-The document it’s called “Literature review” and it’s on the Github repository.
+The document is called “Literature review” and it’s on the Github repository.
 
 
 
@@ -25,25 +27,40 @@ There are 2 approaches mixed in the G drive and in the Github repository. The fi
 For example, let’s take the laws H 2 and HR 2. These are different laws/actions, but the “destring” command removes the suffix and both laws are now called 2. Which is not correct. 
 Another issue with this approach is that it calls datasets and other pieces of code that were on Yusuf’s computer, not on the G drive. It is important to consider also, that this work generates several output files that are called by different pieces of code later on, making them difficult to track and are located in different folders. 
 
-The second approach is an update of Yusuf’s work and the developer is Yimin. His program is documented in the “Replication” file located in the Github repository. This approach consists of running 3 different pieces of code. We encountered a problem with the third of these files called \texttt{“RStan\_model.R”}. This piece of code presents some errors when running the rstan command in R.  This code avoids using the “destring” command and it should perform faster than Yusuf’s code. Its also makes the mergin more efficient and less by doing a better job at cleaning the data set.  
+The second approach is an update of Yusuf’s work and the developer is Yimin. His program is documented in the “Replication” file located in the Github repository. This approach consists of running 3 different pieces of code. We encountered a problem with the third of these files called \texttt{RStan\_model.R}. This piece of code presents some errors when running the rstan command in R.  This code avoids using the “destring” command and it should perform faster than Yusuf’s code. Its also makes the merging more efficient by doing a better job at cleaning the data set.  
 
-At the time of writing this document, I am still working of running the rstan model, troubleshooting the errors. 
+At the time of writing this document, I am still working on troubleshooting the errors in the rstan model. 
+\begin{itemize}
+	\item [KB 10/10/2020]: can you add some details about this now that your work is complete? You'll need to pull my updates to this document down to your repository to do this and then make a new pull request on the .tex and .pdf files for this summary
+\end{itemize}
 
-The other 2 codes \texttt{Generate\_vote\_data\_for\_R.do} and \texttt{Generate\_group\_dummy\_by\_action.do} run perfectly and their output is located in the Combined files folder in the G drive. 
+The other 2 programs \texttt{Generate\_vote\_data\_for\_R.do} and \texttt{Generate\_group\_dummy\_by\_action.do} run perfectly and their output is located in the Combined files folder in the G drive. 
 
 One detail that brings confusion is that Yusuf's and Yimin's work are located in the same folders. 
-Yusuf's work is located inside folders build and analysis. It uses the subfolders input, output and code to call and export different files and datasets (following "order of the files" document must be used to work in these approach)
-Yimin's work is located in build/code ( \texttt{Generate\_vote\_data\_for\_R.do} and \texttt{Generate\_group\_dummy\_by\_action.do} ) and analysis/code (“RStan\_model.R"). His work is describe in "Replication", located in the political-uncertainty Github repository. 
-Therefore, future work will be to separating them and organizing the files from these two different approaches, which will entail changing the output locations in all the individual R and Stata programs. 
+Yusuf's work is located inside folders \texttt{build} and \texttt{analysis}. It uses the subfolders \texttt{input}, \texttt{output} and \texttt{code} to call and export different files and datasets (following ``order of the files'' document must be used to work in these approach).
+\begin{itemize}
+	\item [KB 10/10/2020]: I don't know what ``following ``order of the files'' document must be used to work in these approach'' means
+\end{itemize}
+Yimin's work is located in build/code ( \texttt{Generate\_vote\_data\_for\_R.do} and \texttt{Generate\_group\_dummy\_by\_action.do} ) and analysis/code \texttt{RStan\_model.R}. His work is describe in ``Replication'', located in the political-uncertainty Github repository. 
+
+Therefore, future work will be to separate them and organize the files from these two different approaches, which will entail changing the output locations in all the individual R and Stata programs. 
 
 
 
 \item Data
-Yusuf's approach uses 3 different data sets, 2 from Maplight and one from Poole (Voteview.com). Bill Position Maplight, can be downloaded from their website using a key (need to request one for free) and Votes Maplight was emailed to professor Buzard. Poole’s data set can be downloaded from Voteview.com.
-Yimin’s program only uses the two Maplight data sets, previously mentioned.
 
-I requested a key from Maplight to update the dataset, but, as of the writing of this summary, haven’t received a link to download the dataset. The API key is on the "Road Map" file on the github repository. 
+Yusuf's approach uses 3 different data sets, 2 from Maplight and one from Poole (Voteview.com). Bill Position Maplight, can be downloaded from their website using a key (need to request one for free) and Votes Maplight was emailed to professor Buzard.
+\begin{itemize}
+	\item [KB 10/10/2020] Is ``Bill Position Maplight'' \url{build\input\maplight_bill_positions.dta}, or a raw version of this file that is not in the Github folder?
+	\item [KB 10/10/2020] Similarly, is ``Votes Maplight'' \url{build\input\maplight_votes.dta}, or a raw version of this file that is not in the Github folder?
+\end{itemize}
+Poole’s data set can be downloaded from Voteview.com.
+Yimin’s programs only use the two previously-mentioned Maplight data sets.
 
+I requested a key from Maplight to update the dataset, but, as of the writing of this summary, haven’t received a link to download the dataset. The API key is in \texttt{Road Map.txt} in the main folder of the Github repository. The \texttt{Road Map.txt} document contains more detailed notes about my work over the summer.
+\begin{itemize}
+	\item [KB 10/10/2020] Is this the right way to characterize \texttt{Road Map.txt}?
+\end{itemize}
 
 
 \end{enumerate}
